# DDR5SPDEditor

./: .clang-format  .clangformat  .gitignore  CMakeLists.txt  README.md  ddr5spd.cpp  ddr5spd.h  ddr5spd_structs.h  expo.cpp  expo.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_expo1.cpp  mainwindow_expo2.cpp  mainwindow_jedec.cpp  mainwindow_misc.cpp  mainwindow_xmp1.cpp  mainwindow_xmp2.cpp  mainwindow_xmp3.cpp  mainwindow_xmpu1.cpp  mainwindow_xmpu2.cpp  utilities.cpp  utilities.h  xmp3.cpp  xmp3.h
.github/workflows/: DDR5SPDEditor-action.yml
SPD examples/: DDR5 XMP+EXPO.spd  Sample DDR5 5600 - EXPO XMP Hybrid.spd  Sample DDR5 5600 - XMP Only.spd  Sample DDR5 5600.spd
